Placeholder endpoints for other /games requests
