# Server/swagger.yaml
@@ -19,10 +19,89 @@ components:
         <br/><br/>We use Bearer authentication for requests to the Sequence API
         endpoints. The token is simply a UUID generated by the client. The UUID
         must remain the same between requests to uniquely identify the Player.
-        In the Slate code samples, replace {access-token} with a valid UUID.
+        In the code examples in the API documentation, replace {access-token}
+        with a valid UUID.
       type: http
       scheme: bearer
 paths:
+  '/games/{code}':
+    get:
+      tags:
+        - Games
+      summary: Get the game status for this player. NOT IMPLEMENTED YET.
+      operationId: Get game status NOT LIVE
+      parameters:
+        - name: code
+          in: path
+          description: The unique 4 character code for this game
+          required: true
+          schema:
+            type: string
+      security:
+        - bearerAuth: []
+      responses:
+        '204':
+          description: successful operation
+        '401':
+          description: unauthorised - invalid API token
+        '404':
+          description: game not found
+        '422':
+          description: unprocessable
+  '/games/{code}/players':
+    post:
+      tags:
+        - Games
+      summary: Join a game
+      operationId: Join a game
+      parameters:
+        - name: code
+          in: path
+          description: The unique 4 character code for this game
+          required: true
+          schema:
+            type: string
+      security:
+        - bearerAuth: []
+      responses:
+        '204':
+          description: successful operation
+        '401':
+          description: unauthorised - invalid API token
+        '404':
+          description: game not found
+        '409':
+          description: conflict - another player has aready accepted to join this game
+        '422':
+          description: >-
+            unprocessable - this player has already joined this game (ie this
+            player created the game)
+  '/games/{code}/rounds':
+    post:
+      tags:
+        - Games
+      summary: >-
+        Play a round in a game. NOT IMPLEMENTED YET. NEED TO PASS THE CARD IN
+        THE POST BODY.
+      operationId: Play a round NOT LIVE
+      parameters:
+        - name: code
+          in: path
+          description: The unique 4 character code for this game
+          required: true
+          schema:
+            type: string
+      security:
+        - bearerAuth: []
+      responses:
+        '204':
+          description: successful operation
+        '401':
+          description: unauthorised - invalid API token
+        '404':
+          description: game not found
+        '422':
+          description: unprocessable
   /games:
     post:
       tags:
